--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "next-intl": "^3.24.0",
     "nextjs-toploader": "^3.7.15",
