--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
-    "framer-motion": "^11.11.11",
-    "next": "15.0.2",
-    "next-intl": "^3.24.0",
+    "framer-motion": "^11.11.15",
+    "next": "^15.0.3",
+    "next-intl": "^3.25.1",
     "nextjs-toploader": "^3.7.15",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2"
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+    "typescript": "^5.6.3",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "eslint": "^9.14.0",
+    "eslint-config-next": "15.0.3"
+  }
 }
