--- a/package.json
+++ b/package.json
@@ -26,5 +26,6 @@
     "tailwindcss": "^3.4.14",
     "eslint": "^9.14.0",
     "eslint-config-next": "15.0.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
